--- a/src/views/menu.njk
+++ b/src/views/menu.njk
@@ -1,5 +1,5 @@
 <aside>
-    <nav class="ativo">
+    <nav class="ativo" id="left-menu">
         <ul>
             <li class="list active">
                 <a href="/dashboard">
@@ -8,7 +8,7 @@
                 </a>
             </li>
             <li class="list">
-                <a href="/dashboard/cadastro#cliente">
+                <a href="/dashboard/cadastro">
                     <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
                     <span class="title">Cadastro</span>
                 </a>
