--- a/src/views/agendamento.njk
+++ b/src/views/agendamento.njk
@@ -8,7 +8,7 @@
 
     {%block menu%}
     <aside>
-        <nav class="ativo">
+        <nav class="ativo" id="left-menu">
             <ul>
                 <li class="list">
                     <a href="/dashboard">
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="/dashboard/cadastro#cliente">
+                    <a href="/dashboard/cadastro">
                         <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
                         <span class="title">Cadastro</span>
                     </a>
