--- a/src/views/cadastro.njk
+++ b/src/views/cadastro.njk
@@ -10,7 +10,7 @@
     <body>
         {%block menu%}
         <aside>
-                <nav class="ativo">
+                <nav class="ativo" id="left-menu">
                     <ul>
                         <li class="list ">
                             <a href="/dashboard">
@@ -19,7 +19,7 @@
                             </a>
                         </li>
                         <li class="list active">
-                            <a href="/dashboard/cadastro#cliente">
+                            <a href="/dashboard/cadastro">
                                 <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
                                 <span class="title">Cadastro</span>
                             </a>
@@ -65,6 +65,7 @@
                 <button class="submenu_btn ativo">Cliente</button>
                 <button class="submenu_btn">Funcionario</button>
             </div>
+
 
             <div class="form-wrapper ativo"  id="cliente">
                 <h1>Cadastrar Cliente</h1>
