--- a/src/views/dashboard.njk
+++ b/src/views/dashboard.njk
@@ -7,7 +7,7 @@
 
         {%block menu%}
             <aside>
-                <nav class="ativo">
+                <nav class="ativo" id="left-menu">
                     <ul>
                         <li class="list active">
                             <a href="/dashboard">
@@ -16,7 +16,7 @@
                             </a>
                         </li>
                         <li class="list">
-                            <a href="/dashboard/cadastro#cliente">
+                            <a href="/dashboard/cadastro">
                                 <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
                                 <span class="title">Cadastro</span>
                             </a>
