--- a/src/views/gerenciamento.njk
+++ b/src/views/gerenciamento.njk
@@ -9,7 +9,7 @@
 
     {%block menu%}
     <aside>
-        <nav class="ativo">
+        <nav class="ativo" id="left-menu">
             <ul>
                 <li class="list">
                     <a href="/dashboard">
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="/dashboard/cadastro#cliente">
+                    <a href="/dashboard/cadastro">
                         <span class="icon"><ion-icon name="person-add-outline"></ion-icon></span>
                         <span class="title">Cadastro</span>
                     </a>
@@ -60,23 +60,63 @@
     {%endblock%}
 
     {% block content %}
-        <h1>Gerenciamento 1</h1>
+        <h1>Gerenciamento</h1>
         <div class="table-wrapper">
-            <div class="table-menu">
+            <nav id="admin-menu">
                 <ul>
-                    <li><a href="#">Cadastrar</a></li>
-                    <li><a href="#">Atualizar</a></li>
-                    <li><a href="#">Deletar</a></li>
-                    
+                    <li><a href="#" class="ativo">Funcionarios</a></li>
+                    <li><a href="#">Clientes</a></li>
+                    <li><a href="#">Turmas</a></li>
+                    <li><a href="#">Instrutores</a></li>
+                    <li><a href="#">Agenda</a></li>
                 </ul>
-                <div class="search">
-                        <input type="text" name="search" id="search">
-                        <button>Pesquisar</button>
-                </div>
-            </div>
+            </nav>
 
-            <div class="table">
+            {%block table%}
                 
-            </div>
+            <div class="row">
+                <div class="col-6">
+                    <h1>Funcionarios</h1>
+                </div>
+                <div class="col-6 d-flex justify-content-end">
+                    <a href="/adduser" type="button" class="btn btn-primary align-self-center">+ add Funcionarios</a>
+                </div>
+            </div>    
+
+
+            <table class="table table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                <th scope="col">#</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col" class="text-end">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                {# {{#each rows}} #}
+                <tr>
+                <th scope="row">{{this.id}}</th>
+                <td>{{this.first_name}}</td>
+                <td>{{this.last_name}}</td>
+                <td>{{this.email}}</td>
+                <td>{{this.phone}}</td>
+                <td class="text-end">
+                    <a href="/viewuser/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-eye"></i> View</a>
+                    <a href="/edituser/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-pencil"></i>
+                    Edit</a>
+                    <a href="/{{this.id}}" type="button" class="btn btn-light btn-small"><i class="bi bi-person-x"></i> Delete</a>
+                </td>
+                </tr>
+                {# {{/each}} #}
+
+            </tbody>
+            </table>
+
+            {%endblock%}
+            
         </div>
     {% endblock %}
