--- a/src/views/login.njk
+++ b/src/views/login.njk
@@ -18,7 +18,7 @@
             <h1>Login</h1>
 
             <div id="error"></div>
-            <form method="post" action="/dashboard#login" id="form">
+            <form method="post" action="/dashboard#login" href="/dashboard" id="form">
                 <div class="input-wrapper">
                     <label for="email">Email </label>
                     <input type="text" name="email" id="email" placeholder="seu@email.com">
