--- a/views/template/table 2.njk
+++ b/views/template/table 2.njk
@@ -1,17 +1,17 @@
 
 
-<div class="table-head">
+ <div class="table-head">
             <ul>
-                <li>id <div class="filter-id"></div></li>
-                <li>Nome <div class="filter-nome"></div></li>
-                <li>Email <div class="filter-email"></div></li>
-                <li>Telefone <div class="filter-telefone"></div></li>
-                <li>Cpf <div class="filter-cpf"></div></li>
-                <li>Acões<div class="filter-cpf"></div></li>
+                <li>Nome <div class="filter nome"></div></li>
+                <li>Email <div class="filter email"></div></li>
+                <li>Telefone <div class="filter telefone"></div></li>
+                <li>Status <div class="filter status"></div></li>
+                <li>Acões</li>
             </ul>
         </div>
 
         <div class="table">
+            
             {%block rows%}
             
             {%endblock %}
