--- a/public/styles/cadastro.css
+++ b/public/styles/cadastro.css
@@ -15,7 +15,7 @@ form{
     padding: 40px 60px;
     border-radius: 5px;
     
-    display: none;
+    display: block;
     
     animation: moving .5s ease;
 }
@@ -32,9 +32,7 @@ form{
     
 }
 
-.form-wrapper.ativo{
-    display: block;
-}
+
 
 .input-wrapper{
     display: grid;
@@ -65,7 +63,7 @@ form button{
     border-radius: 5px;
 }
 
-.form-wrapper input, .form-wrapper button{
+.form-wrapper input, .form-wrapper button, .form-wrapper select{
     padding: 10px;
 
     width: 100%;
@@ -73,7 +71,7 @@ form button{
    
 }
 
-input{
+input, select{
     border: none;
     border: 1px solid teal;
 }
@@ -113,6 +111,8 @@ input{
     border-bottom: 2px solid teal;
 
     transition: all .3s ease-in-out;
+
+    text-decoration: none;
 }
 
 .submenu .submenu_btn:hover{
@@ -122,5 +122,41 @@ input{
 
 .submenu .submenu_btn.ativo{
     background-color: teal;
+}
+
+
+
+.alert-box {
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    max-width: 500px;
+    margin-bottom: 5px;
+
+    align-items: center;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.alert-box.deleted{
+    background-color: #dc3545;
+    color: white;
+    
+}
+.alert-box .close-alert{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    background: none;
+    color: white;
+    font-size: 1.5em;
+
+    border: none;
+    cursor: pointer;
+}
+
+.alert-box.desativado {
+    display: none;
+    overflow: hidden;
 }
 
