--- a/views/admin/cadastro/funcionario.njk
+++ b/views/admin/cadastro/funcionario.njk
@@ -62,87 +62,39 @@
 
             {%block content%}
             <div class="submenu">
-                <button class="submenu_btn ativo">Cliente</button>
-                <button class="submenu_btn">Funcionario</button>
-            </div>
-
-
-            <div class="form-wrapper ativo"  id="cliente">
-                <h1>Cadastrar Cliente</h1>
-    
-                <div id="error"></div>
-                <form action="" method="" id="form" class="cliente">
-                    <div class="input-wrapper">
-                        <label for="Nome">Nome </label>
-                        <input type="text" name="Nome" id="Nome" placeholder="Nome">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="Sobrenome">Sobrenome </label>
-                        <input type="text" name="Sobrenome" id="Sobrenome" placeholder="Sobrenome">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="cpf">CPF </label>
-                        <input type="text" name="cpf" id="cpf" placeholder="cpf">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="celular">Celular </label>
-                        <input type="text" name="celular" id="celular" placeholder="celular">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="Endereço">Endereço </label>
-                        <input type="text" name="Endereço" id="Endereço" placeholder="Endereço">
-                    </div>
-                    
-                    <div class="input-wrapper">
-                        <label for="cep">Cep </label>
-                        <input type="text" name="cep" id="cep" placeholder="CEP">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="email">Email </label>
-                        <input type="text" name="email" id="email" placeholder="seu@email.com">
-                    </div>
-
-                    <div class="input-wrapper">
-                        <label for="password">Senha </label>
-                        <input type="password" name="password" id="password" placeholder="senha">
-                    </div>
-                    <button type="submit" id="logar">Cadastrar</button>
-                </form>
-              
+                <a href="/dashboard/cadastro/cliente" class="submenu_btn ">Cliente</a>
+                <a href="/dashboard/cadastro/funcionario" class="submenu_btn ativo">Funcionario</a>
+                <a href="/dashboard/cadastro/instrutor" class="submenu_btn">Instrutor</a>
             </div>
 
             <div class="form-wrapper"  id="funcionario">
                 <h1>Cadastrar Funcionario</h1>
+
+                {% for mensagem in msg%}
+
+                <div class="alert-box deleted">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
     
-                <div id="error"></div>
-                <form action="" method="" id="form" class="funcionario">
-                    <div class="input-wrapper">
-                        <label for="Nome">Nome </label>
-                        <input type="text" name="Nome" id="Nome" placeholder="Nome">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="Sobrenome">Sobrenome </label>
-                        <input type="text" name="Sobrenome" id="Sobrenome" placeholder="Sobrenome">
+                <form action="/dashboard/cadastro/funcionario" method="POST" id="form" class="funcionario">
+
+                     <div class="input-wrapper">
+                        <label for="nome">Nome </label>
+                        <input type="text" name="nome" id="nome" placeholder="nome">
                     </div>
 
                     <div class="input-wrapper">
-                        <label for="cpf">CPF </label>
-                        <input type="text" name="cpf" id="cpf" placeholder="cpf">
+                        <label for="sobrenome">Sobrenome </label>
+                        <input type="text" name="sobrenome" id="sobrenome" placeholder="sobrenome">
                     </div>
+
                     <div class="input-wrapper">
-                        <label for="celular">Celular </label>
-                        <input type="text" name="celular" id="celular" placeholder="celular">
-                    </div>
-                    <div class="input-wrapper">
-                        <label for="Endereço">Endereço </label>
-                        <input type="text" name="Endereço" id="Endereço" placeholder="Endereço">
-                    </div>
-                    
-                    <div class="input-wrapper">
-                        <label for="cep">Cep </label>
-                        <input type="text" name="cep" id="cep" placeholder="CEP">
+                        <label for="dataNascimento">Data De Nascimento </label>
+                        <input type="Date" name="dataNascimento" id="dataNascimento" placeholder="dataNascimento" 
+                        min="1930-01-01" max='2023-03-31'>
                     </div>
 
                     <div class="input-wrapper">
@@ -150,9 +102,42 @@
                         <input type="text" name="email" id="email" placeholder="seu@email.com">
                     </div>
 
+                     <div class="input-wrapper">
+                        <label for="senha">Senha </label>
+                        <input type="senha" name="senha" id="senha" placeholder="senha">
+                    </div>
+
                     <div class="input-wrapper">
-                        <label for="password">Senha </label>
-                        <input type="password" name="password" id="password" placeholder="senha">
+                        <label for="cpf">CPF </label>
+                        <input type="text" name="cpf" id="cpf" placeholder="cpf">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="sexo">Sexo</label>
+                        <select name="sexo" id="sexo">
+                            <option value="Masculino">Masculino</option>
+                            <option value="Feminino">Feminino</option>
+                            <option value="Outro">Outro</option>
+                        </select>
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="cargo">Cargo</label>
+                        <select name="cargo" id="cargo">
+                            <option value="Atendente">Atendente</option>
+                            <option value="Gerente">Gerente</option>
+                            
+                        </select>
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="telefone">Telefone </label>
+                        <input type="text" name="telefone" id="telefone" placeholder="telefone">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="endereco">Endereço </label>
+                        <input type="text" name="endereco" id="endereco" placeholder="endereco">
                     </div>
     
                     <button type="submit" id="logar">Cadastrar</button>
@@ -165,5 +150,6 @@
       
 {%block scripts%}
     <script src="/scripts/cadastro.js"></script>
+     <script src="/scripts/flashmsg.js"></script>
 {%endblock%}
 
