--- a/views/admin/gerenciamento/clientes/clientes.njk
+++ b/views/admin/gerenciamento/clientes/clientes.njk
@@ -65,27 +65,40 @@
                 <ul>
                     <li><a href="/dashboard/gerenciamento/funcionarios" >Funcionarios</a></li>
                     <li><a href="/dashboard/gerenciamento/clientes" class="ativo">Clientes</a></li>
-                    <li><a href="/dashboard/gerenciamento/turmas">Turmas</a></li>
                     <li><a href="/dashboard/gerenciamento/instrutores">Instrutores</a></li>
-                    <li><a href="/dashboard/gerenciamento/agenda">Agenda</a></li>
                 </ul>
             </nav>
 
-            <div class="title">
+            <div class="title table-nav">
                 <h1>Clientes</h1>
+
+                <form class="search-form" role="search" method="POST" action="/dashboard/gerenciamento/clientes/search">
+                <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
+                </form>
+
+                <a href="/dashboard/cadastro/cliente" class="add">+ Cliente</a>
             </div>
-        {%block table%}
+
+            {% for mensagem in msg%}
+
+                <div class="alert-box deleted">
+                    <p>{{mensagem}}</p>
+                    <button class="close-alert"><ion-icon name="close"></ion-icon></button>
+                </div>
+
+            {% endfor %}
+    {%block table%}
 
 
         <div class="table-head">
             <ul>
                 {# <li>id <div class="filter-id"></div></li> #}
-                <li>Nome <div class="filter-nome"></div></li>
-                <li>Email <div class="filter-email"></div></li>
-                <li>Telefone <div class="filter-telefone"></div></li>
+                <li>Nome <div class="filter nome"></div></li>
+                <li>Email <div class="filter email"></div></li>
+                <li>Telefone <div class="filter telefone"></div></li>
                 {# <li>Cpf <div class="filter-cpf"></div></li> #}
-                <li>Status <div class="filter-status"></div></li>
-                <li>Acões<div class="filter-cpf"></div></li>
+                <li>Status <div class="filter status"></div></li>
+                <li>Acões</li>
             </ul>
         </div>
 
@@ -126,7 +139,62 @@
 
             
         </div>
-        {%endblock%}
+    {%endblock%}
             
         </div>
-    {% endblock %}
+
+
+{# Pagination #}
+
+        {% if clientesAcademia.length > 0 %}
+
+            <nav class="pagination-nav">
+                <ul class="pagination-ul">
+
+                    {% if current == 1 %}
+                        <li class="page-item disabled"><a href="#" class="page-link">Primeira</a></li>
+                        {% else %}
+                        <li class="page-item"><a href="/dashboard/gerenciamento/Clientes/?page=1" class="page-link">Primeira</a></li>
+                    {% endif %}
+
+
+                    {% set i = 0 %}
+
+                    {% if number > 5 %}
+                        {% set i = number - 4 %}
+                        {% else %}
+                        {% set i = 1 %}
+                    {% endif %}
+
+
+                    {% for i in range(1 , pages + 1) %}
+                        {% if i == current %}
+                            <li class="page-item disabled"><a href="" class="page-link">{{i}}</a></li>
+                            {%else%}
+                            <li class="page-item"><a href="/dashboard/gerenciamento/Clientes/?page={{i}}" class="page-link">{{i}}</a></li>
+                        {% endif %}
+
+                     
+                    {% endfor %}
+
+
+                    {% if current == pages %}
+                        <li class="page-item disabled"><a href="" class="page-link">Ultima</a></li>
+                        {%else%}
+                        <li class="page-item"><a href="/dashboard/gerenciamento/Clientes/?page={{pages}}" class="page-link">Ultima</a></li>
+                    {% endif %}
+
+                </ul>
+            </nav>
+
+        {% endif %}
+
+
+
+{% endblock %}
+
+
+{%block scripts%}
+<script src="/scripts/flashmsg.js"></script>
+
+{%endblock%}
